fixed alignment bug on mobile

--- a/src/Components/Charts/Charts.module.css
+++ b/src/Components/Charts/Charts.module.css
@@ -14,9 +14,3 @@
   margin-right: 2% !important; */
   margin-top: 2% !important;
 }
-
-@media only screen and (max-width: 770px) {
-  .container {
-    width: 85%;
-  }
-}
